--- a/шпаргалка3.1-3.5.md
+++ b/шпаргалка3.1-3.5.md
@@ -207,7 +207,7 @@ for переменная in последовательность:
 ```python
 numbers = [1, 2, 3]
 
-for n in numbers:
+for n in numbers: # for n in 1,2,3 :
     print(n)
 ```
 
@@ -333,7 +333,6 @@ secret = 7
 
 while True:
     guess = int(input("Введите число: "))
-
     if guess == secret:
         print("Угадал!")
         break
@@ -341,6 +340,8 @@ while True:
         print("Слишком большое")
     else:
         print("Слишком маленькое")
+else:
+    print("False")  # после срабатывания условия   
 ```
 
 ---
