--- a/шпаргалка1.1-2.4.md
+++ b/шпаргалка1.1-2.4.md
@@ -17,7 +17,17 @@
 * Переменные — это **ссылки на объекты**, а не контейнеры значений.
 
 ---
+# 2️⃣ Числовые типы
+# Присваивание
+## 🔹 int (целые числа)
 
+```python
+x = 10
+y = -3
+z = 10_000_000
+print(type(x))
+print(id(x))
+```
 
 ## ⚙ Ассемблер
 
@@ -49,17 +59,51 @@ b ─┘
 
 * * *
 
-# 2️⃣ Числовые типы
-# Присваивание
-## 🔹 int (целые числа)
+# Алгоритмическая схема обмена (C++)
 
-```python
-x = 10
-y = -3
-z = 10_000_000
-print(type(x))
-print(id(x))
+
 ```
+на Входе: a, b Как нам поменять местами а и Ь
+1. temp ← a
+2. a ← b
+3. b ← temp
+Выход: a и b поменяны местами
+```
+
+# Обмен через ДВЕ временные переменные
+
+Это учебный пример (алгоритмически избыточный):
+```
+a = 3  
+b = 7  
+  
+temp1 = a  
+temp2= b  
+  
+a = temp2  
+b = temp1  
+  
+print(a, b)
+```
+Здесь просто явно сохраняем оба значения.
+
+Используется редко, но помогает понять принцип.
+
+* * *
+
+# (Наш первый алгоритм)
+#  Множественное присваивание 
+
+Это особенность Python.
+```
+a = 3  
+b = 7  
+  
+a, b = b, a  
+  
+print(a, b)
+```
+______
 
 
 ### Системы счисления
